// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App > matches its snapshot 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root-huVzpj eRbIBy MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row sc-kHOYJp LDdiq"
  >
    <aside
      class="MuiGrid-root-huVzpj hTFoqC MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-4 MuiGrid-grid-lg-2 sc-hOGlKT hCexNt"
    >
      <div
        class="sc-dtMhIu kRfDJ"
      >
        <div
          class="sc-cZMPup jwuMQU"
        >
          D
        </div>
        <div
          class="sc-jUouQM bTOAOH"
        >
          <p
            class="sc-jQrBgb juQOLC"
          >
            Workspace
          </p>
          <h1
            class="sc-fvxxdC koRssm"
          >
            Dashboard
          </h1>
        </div>
      </div>
      <nav
        aria-label="Main navigation"
        class="sc-fbyePx XAXTd"
      >
        <a
          aria-current="page"
          class="sc-GEaMY ixcMfj"
          data-discover="true"
          href="/"
        >
          <span
            class="sc-gsNiZj jcElmo"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-ffqWxl kGIqpq MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
              data-testid="DashboardOutlinedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v2h-4V5zM9 5v6H5V5zm10 8v6h-4v-6zM9 17v2H5v-2zM21 3h-8v6h8zM11 3H3v10h8zm10 8h-8v10h8zm-10 4H3v6h8z"
              />
            </svg>
          </span>
          Overview
        </a>
        <a
          class="sc-GEaMY fqmEhl"
          data-discover="true"
          href="/analytics"
        >
          <span
            class="sc-gsNiZj jcElmo"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-ffqWxl kGIqpq MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
              data-testid="InsightsOutlinedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 8c-1.45 0-2.26 1.44-1.93 2.51l-3.55 3.56c-.3-.09-.74-.09-1.04 0l-2.55-2.55C12.27 10.45 11.46 9 10 9c-1.45 0-2.27 1.44-1.93 2.52l-4.56 4.55C2.44 15.74 1 16.55 1 18c0 1.1.9 2 2 2 1.45 0 2.26-1.44 1.93-2.51l4.55-4.56c.3.09.74.09 1.04 0l2.55 2.55C12.73 16.55 13.54 18 15 18c1.45 0 2.27-1.44 1.93-2.52l3.56-3.55c1.07.33 2.51-.48 2.51-1.93 0-1.1-.9-2-2-2"
              />
              <path
                d="m15 9 .94-2.07L18 6l-2.06-.93L15 3l-.92 2.07L12 6l2.08.93zM3.5 11 4 9l2-.5L4 8l-.5-2L3 8l-2 .5L3 9z"
              />
            </svg>
          </span>
          Analytics
        </a>
        <a
          class="sc-GEaMY fqmEhl"
          data-discover="true"
          href="/revenue"
        >
          <span
            class="sc-gsNiZj jcElmo"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-ffqWxl kGIqpq MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
              data-testid="AccountBalanceWalletOutlinedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 7.28V5c0-1.1-.9-2-2-2H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-2.28c.59-.35 1-.98 1-1.72V9c0-.74-.41-1.37-1-1.72M20 9v6h-7V9zM5 19V5h14v2h-6c-1.1 0-2 .9-2 2v6c0 1.1.9 2 2 2h6v2z"
              />
              <circle
                cx="16"
                cy="12"
                r="1.5"
              />
            </svg>
          </span>
          Revenue
        </a>
        <a
          class="sc-GEaMY fqmEhl"
          data-discover="true"
          href="/orders"
        >
          <span
            class="sc-gsNiZj jcElmo"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-ffqWxl kGIqpq MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
              data-testid="ReceiptLongOutlinedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19.5 3.5 18 2l-1.5 1.5L15 2l-1.5 1.5L12 2l-1.5 1.5L9 2 7.5 3.5 6 2v14H3v3c0 1.66 1.34 3 3 3h12c1.66 0 3-1.34 3-3V2zM15 20H6c-.55 0-1-.45-1-1v-1h10zm4-1c0 .55-.45 1-1 1s-1-.45-1-1v-3H8V5h11z"
              />
              <path
                d="M9 7h6v2H9zm7 0h2v2h-2zm-7 3h6v2H9zm7 0h2v2h-2z"
              />
            </svg>
          </span>
          Orders
        </a>
        <a
          class="sc-GEaMY fqmEhl"
          data-discover="true"
          href="/messages"
        >
          <span
            class="sc-gsNiZj jcElmo"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-ffqWxl kGIqpq MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
              data-testid="ChatBubbleOutlineIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 2H4c-1.1 0-2 .9-2 2v18l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2m0 14H6l-2 2V4h16z"
              />
            </svg>
          </span>
          Messages
        </a>
        <a
          class="sc-GEaMY fqmEhl"
          data-discover="true"
          href="/settings"
        >
          <span
            class="sc-gsNiZj jcElmo"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-ffqWxl kGIqpq MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
              data-testid="SettingsOutlinedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19.43 12.98c.04-.32.07-.64.07-.98s-.03-.66-.07-.98l2.11-1.65c.19-.15.24-.42.12-.64l-2-3.46c-.09-.16-.26-.25-.44-.25-.06 0-.12.01-.17.03l-2.49 1c-.52-.4-1.08-.73-1.69-.98l-.38-2.65C14.46 2.18 14.25 2 14 2h-4c-.25 0-.46.18-.49.42l-.38 2.65c-.61.25-1.17.59-1.69.98l-2.49-1q-.09-.03-.18-.03c-.17 0-.34.09-.43.25l-2 3.46c-.13.22-.07.49.12.64l2.11 1.65c-.04.32-.07.65-.07.98s.03.66.07.98l-2.11 1.65c-.19.15-.24.42-.12.64l2 3.46c.09.16.26.25.44.25.06 0 .12-.01.17-.03l2.49-1c.52.4 1.08.73 1.69.98l.38 2.65c.03.24.24.42.49.42h4c.25 0 .46-.18.49-.42l.38-2.65c.61-.25 1.17-.59 1.69-.98l2.49 1q.09.03.18.03c.17 0 .34-.09.43-.25l2-3.46c.12-.22.07-.49-.12-.64zm-1.98-1.71c.04.31.05.52.05.73s-.02.43-.05.73l-.14 1.13.89.7 1.08.84-.7 1.21-1.27-.51-1.04-.42-.9.68c-.43.32-.84.56-1.25.73l-1.06.43-.16 1.13-.2 1.35h-1.4l-.19-1.35-.16-1.13-1.06-.43c-.43-.18-.83-.41-1.23-.71l-.91-.7-1.06.43-1.27.51-.7-1.21 1.08-.84.89-.7-.14-1.13c-.03-.31-.05-.54-.05-.74s.02-.43.05-.73l.14-1.13-.89-.7-1.08-.84.7-1.21 1.27.51 1.04.42.9-.68c.43-.32.84-.56 1.25-.73l1.06-.43.16-1.13.2-1.35h1.39l.19 1.35.16 1.13 1.06.43c.43.18.83.41 1.23.71l.91.7 1.06-.43 1.27-.51.7 1.21-1.07.85-.89.7zM12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4m0 6c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2"
              />
            </svg>
          </span>
          Settings
        </a>
      </nav>
      <div
        class="sc-bXTeWK hpjHRj"
      >
        <div
          class="sc-eGRVbO kMGfsU"
        >
          AD
        </div>
        <div
          class="sc-ctqRxX juLQum"
        >
          <strong>
            Admin
          </strong>
          <small>
            Workspace
          </small>
        </div>
      </div>
    </aside>
    <main
      class="MuiGrid-root-huVzpj kIdeXO MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-4 MuiGrid-grid-lg-10 sc-dFtBLA gfpMvk"
    >
      <div
        class="sc-dlVwtM sc-AjlSJ jRmdpA MuiBox-root"
      >
        <div>
          <p
            class="sc-khQeTG bexipk"
          >
            Monday, Sep 28
          </p>
          <h2
            class="sc-hUpbpP gWnlXh"
          >
            Overview
          </h2>
        </div>
        <div
          class="MuiStack-root-eDNxKZ iQCCXE MuiStack-root sc-jgrLDs dptLgH"
        >
          <button
            aria-label="Search"
            class="MuiButtonBase-root-KjFWT jzTTmA MuiButtonBase-root MuiIconButton-root-jYvjWt eSYNrZ MuiIconButton-root MuiIconButton-sizeMedium sc-gSQHZB HHshx"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-ffqWxl eeSQDk MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
              data-testid="SearchIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14"
              />
            </svg>
          </button>
          <button
            aria-haspopup="menu"
            aria-label="Notifications"
            class="MuiButtonBase-root-KjFWT jzTTmA MuiButtonBase-root MuiIconButton-root-jYvjWt eSYNrZ MuiIconButton-root MuiIconButton-sizeMedium sc-gSQHZB HHshx"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-ffqWxl eeSQDk MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
              data-testid="NotificationsNoneIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.9 2 2 2m6-6v-5c0-3.07-1.63-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.64 5.36 6 7.92 6 11v5l-2 2v1h16v-1zm-2 1H8v-6c0-2.48 1.51-4.5 4-4.5s4 2.02 4 4.5z"
              />
            </svg>
          </button>
          <button
            class="MuiButtonBase-root-KjFWT jzTTmA MuiButtonBase-root MuiButton-root-gygAfe UEwGP MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary sc-lbhHsq jEfNzz"
            data-active="true"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-startIcon-eHntpP hoqXmN MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-ffqWxl eeSQDk MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                data-testid="AddIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
                />
              </svg>
            </span>
            New report
          </button>
        </div>
      </div>
      <div
        class="MuiGrid-root-huVzpj eVGMZR MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 sc-kfPsKX hWfKrs"
      >
        <div
          class="MuiGrid-root-huVzpj cHqeFn MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12"
        >
          <div
            class="MuiGrid-root-huVzpj eVGMZR MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 sc-gsDMPd igAZwR"
          >
            <div
              class="MuiGrid-root-huVzpj dGKdmp MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-lg-4"
            >
              <div
                class="MuiPaper-root-jrhCcG jOcBbN MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root-gZShbg fgCKnE MuiCard-root sc-dkPwfY gTBLc"
                style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
              >
                <div
                  class="MuiCardContent-root-gzKKBN kqwYnw MuiCardContent-root sc-hKwBjT fBDKED"
                >
                  <div
                    class="sc-eCIkAO ceECZG"
                  >
                    <span
                      class="sc-jRQBiJ fikzZh"
                    >
                      Sales
                    </span>
                    <span
                      class="sc-gKckzE eNGhgi"
                    >
                      +18.2%
                    </span>
                  </div>
                  <div
                    class="sc-iCfNyT fCMQTx"
                  >
                    <h3
                      class="sc-furwPO fwpksh"
                    >
                      $48.2K
                    </h3>
                    <span
                      class="sc-pVUti iwqvMJ"
                    >
                      ▲ 1.9K
                    </span>
                  </div>
                  <div
                    class="sc-jrQAon cRdNAl"
                  >
                    <span
                      class="sc-kDTkBQ bWIOGK"
                    />
                    <span
                      class="sc-kDTkBQ aUgaj"
                    />
                    <span
                      class="sc-kDTkBQ jjRYNB"
                    />
                    <span
                      class="sc-kDTkBQ jBeTYU"
                    />
                    <span
                      class="sc-kDTkBQ gDRsII"
                    />
                    <span
                      class="sc-kDTkBQ CYMty"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-huVzpj dGKdmp MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-lg-4"
            >
              <div
                class="MuiPaper-root-jrhCcG jOcBbN MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root-gZShbg fgCKnE MuiCard-root sc-dkPwfY gTBLc"
                style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
              >
                <div
                  class="MuiCardContent-root-gzKKBN kqwYnw MuiCardContent-root sc-hKwBjT fBDKED"
                >
                  <div
                    class="sc-eCIkAO ceECZG"
                  >
                    <span
                      class="sc-jRQBiJ fikzZh"
                    >
                      Conversion
                    </span>
                    <span
                      class="sc-gKckzE eNGhgi"
                    >
                      +12.4%
                    </span>
                  </div>
                  <div
                    class="sc-iCfNyT fCMQTx"
                  >
                    <h3
                      class="sc-furwPO fwpksh"
                    >
                      6.84%
                    </h3>
                    <span
                      class="sc-pVUti iwqvMJ"
                    >
                      ▲ 0.8%
                    </span>
                  </div>
                  <div
                    class="sc-jrQAon cRdNAl"
                  >
                    <span
                      class="sc-kDTkBQ jrNGpF"
                    />
                    <span
                      class="sc-kDTkBQ hzMJzC"
                    />
                    <span
                      class="sc-kDTkBQ eaeGXZ"
                    />
                    <span
                      class="sc-kDTkBQ xmOPs"
                    />
                    <span
                      class="sc-kDTkBQ hGqTQx"
                    />
                    <span
                      class="sc-kDTkBQ fLrFbY"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-huVzpj dGKdmp MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-lg-4"
            >
              <div
                class="MuiPaper-root-jrhCcG jOcBbN MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root-gZShbg fgCKnE MuiCard-root sc-dkPwfY gTBLc"
                style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
              >
                <div
                  class="MuiCardContent-root-gzKKBN kqwYnw MuiCardContent-root sc-hKwBjT fBDKED"
                >
                  <div
                    class="sc-eCIkAO ceECZG"
                  >
                    <span
                      class="sc-jRQBiJ fikzZh"
                    >
                      Visitors
                    </span>
                    <span
                      class="sc-gKckzE epWxRl"
                    >
                      -3.1%
                    </span>
                  </div>
                  <div
                    class="sc-iCfNyT fCMQTx"
                  >
                    <h3
                      class="sc-furwPO fwpksh"
                    >
                      14.8K
                    </h3>
                    <span
                      class="sc-pVUti gwROOr"
                    >
                      ▼ 420
                    </span>
                  </div>
                  <div
                    class="sc-jrQAon cRdNAl"
                  >
                    <span
                      class="sc-kDTkBQ gvpUa-d"
                    />
                    <span
                      class="sc-kDTkBQ koUvWq"
                    />
                    <span
                      class="sc-kDTkBQ cRIMSq"
                    />
                    <span
                      class="sc-kDTkBQ klRHrM"
                    />
                    <span
                      class="sc-kDTkBQ bPIuPn"
                    />
                    <span
                      class="sc-kDTkBQ WwbrQ"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-huVzpj gkBuWC MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
        >
          <div
            class="MuiPaper-root-jrhCcG jOcBbN MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root-gZShbg fgCKnE MuiCard-root sc-iqsgXZ ewqpMN"
            style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
          >
            <div
              class="MuiCardContent-root-gzKKBN kqwYnw MuiCardContent-root sc-crHjOq kIqsnS"
            >
              <div
                class="sc-eggkz dyXmFS"
              >
                <div>
                  <p
                    class="sc-bqiQyc dEWcMl"
                  >
                    Performance
                  </p>
                  <h3
                    class="sc-ksdwth ixhMHU"
                  >
                    Revenue overview
                  </h3>
                </div>
                <div
                  aria-label="Revenue period"
                  class="MuiToggleButtonGroup-root-fRZoWf dfzDsy MuiToggleButtonGroup-root MuiToggleButtonGroup-horizontal sc-hBUSYK bPJxXp"
                  role="group"
                >
                  <button
                    aria-label="Month"
                    aria-pressed="true"
                    class="MuiButtonBase-root-KjFWT jzTTmA MuiButtonBase-root MuiToggleButton-root-lmwsek bxBlSi MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard sc-fotPuT MuiToggleButtonGroup-firstButton"
                    tabindex="0"
                    type="button"
                    value="Month"
                  >
                    Month
                  </button>
                  <button
                    aria-label="Quarter"
                    aria-pressed="false"
                    class="MuiButtonBase-root-KjFWT jzTTmA MuiButtonBase-root MuiToggleButton-root-lmwsek bxBlSi MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard sc-fotPuT MuiToggleButtonGroup-middleButton"
                    tabindex="0"
                    type="button"
                    value="Quarter"
                  >
                    Quarter
                  </button>
                  <button
                    aria-label="Year"
                    aria-pressed="false"
                    class="MuiButtonBase-root-KjFWT jzTTmA MuiButtonBase-root MuiToggleButton-root-lmwsek bxBlSi MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard sc-fotPuT MuiToggleButtonGroup-lastButton"
                    tabindex="0"
                    type="button"
                    value="Year"
                  >
                    Year
                  </button>
                </div>
              </div>
              <div
                aria-label="Month revenue chart"
                class="sc-fFelbd iiJIS"
              >
                <div
                  class="sc-bkkgYE ipzbSX"
                />
                <div
                  class="sc-ieedpP DFVZV"
                >
                  <span
                    class="sc-dJjZnq kWAYEc"
                  />
                  <span
                    class="sc-dJjZnq gzGZdQ"
                  />
                  <span
                    class="sc-dJjZnq gHWBDc"
                  />
                  <span
                    class="sc-dJjZnq fMJwBx"
                  />
                  <span
                    class="sc-dJjZnq fpDhpx"
                  />
                  <span
                    class="sc-dJjZnq djyFnJ"
                  />
                  <span
                    class="sc-dJjZnq ghXRzT"
                  />
                  <span
                    class="sc-dJjZnq jCReRc"
                  />
                  <span
                    class="sc-dJjZnq eKRbbS"
                  />
                  <span
                    class="sc-dJjZnq lgiESJ"
                  />
                  <span
                    class="sc-dJjZnq lkgRBp"
                  />
                  <span
                    class="sc-dJjZnq dkTBSA"
                  />
                </div>
              </div>
              <div
                class="sc-hGPAwl hlANgT"
              >
                <span>
                  Jan
                </span>
                <span>
                  Feb
                </span>
                <span>
                  Mar
                </span>
                <span>
                  Apr
                </span>
                <span>
                  May
                </span>
                <span>
                  Jun
                </span>
                <span>
                  Jul
                </span>
                <span>
                  Aug
                </span>
                <span>
                  Sep
                </span>
                <span>
                  Oct
                </span>
                <span>
                  Nov
                </span>
                <span>
                  Dec
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-huVzpj cDcyKm MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
        >
          <div
            class="MuiPaper-root-jrhCcG jOcBbN MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root-gZShbg fgCKnE MuiCard-root sc-fKVoIy epJDED"
            style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
          >
            <div
              class="MuiCardContent-root-gzKKBN kqwYnw MuiCardContent-root sc-bBHAhJ bmVDgK"
            >
              <div
                class="sc-dlVwtM sc-iwjfEg cBTSji MuiBox-root"
              >
                <div>
                  <p
                    class="sc-cxpUrY jujNPJ"
                  >
                    Today
                  </p>
                  <h3
                    class="sc-llYVjd jvkCAm"
                  >
                    Tasks
                  </h3>
                </div>
                <button
                  class="MuiButtonBase-root-KjFWT jzTTmA MuiButtonBase-root MuiButton-root-gygAfe beoaly MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary sc-iJKPHa VmjWd"
                  tabindex="0"
                  type="button"
                >
                  View all
                </button>
              </div>
              <ul
                class="MuiList-root-fLOioK lhYeCO MuiList-root sc-giYgZj jXyPoe"
              >
                <div
                  class="MuiButtonBase-root-KjFWT jzTTmA MuiButtonBase-root MuiListItemButton-root-frNOJJ flARlq MuiListItemButton-root sc-ezbjNg einWoW"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="sc-bYoBfp lnmAYX"
                  />
                  <span
                    class="sc-kLwfci fxHaWK"
                  >
                    <strong
                      class="sc-ikJwur liAwyU"
                    >
                      Design review
                    </strong>
                    <small
                      class="sc-jJoSXA ikAfPw"
                    >
                      09:30 AM
                    </small>
                  </span>
                </div>
                <div
                  class="MuiButtonBase-root-KjFWT jzTTmA MuiButtonBase-root MuiListItemButton-root-frNOJJ flARlq MuiListItemButton-root sc-ezbjNg einWoW"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="sc-bYoBfp cMQmAZ"
                  />
                  <span
                    class="sc-kLwfci fxHaWK"
                  >
                    <strong
                      class="sc-ikJwur liAwyU"
                    >
                      Marketing sync
                    </strong>
                    <small
                      class="sc-jJoSXA ikAfPw"
                    >
                      11:00 AM
                    </small>
                  </span>
                </div>
                <div
                  class="MuiButtonBase-root-KjFWT jzTTmA MuiButtonBase-root MuiListItemButton-root-frNOJJ flARlq MuiListItemButton-root sc-ezbjNg einWoW"
                  role="button"
                  tabindex="0"
                >
                  <span
                    class="sc-bYoBfp exjpIe"
                  />
                  <span
                    class="sc-kLwfci fxHaWK"
                  >
                    <strong
                      class="sc-ikJwur liAwyU"
                    >
                      Campaign launch
                    </strong>
                    <small
                      class="sc-jJoSXA ikAfPw"
                    >
                      02:00 PM
                    </small>
                  </span>
                </div>
              </ul>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-huVzpj haGPqS MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-lg-7"
        >
          <div
            class="MuiPaper-root-jrhCcG jOcBbN MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root-gZShbg fgCKnE MuiCard-root sc-fKVoIy epJDED"
            style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
          >
            <div
              class="MuiCardContent-root-gzKKBN kqwYnw MuiCardContent-root sc-bBHAhJ bmVDgK"
            >
              <div
                class="sc-dlVwtM sc-iwjfEg cBTSji MuiBox-root"
              >
                <div>
                  <p
                    class="sc-cxpUrY jujNPJ"
                  >
                    Leads
                  </p>
                  <h3
                    class="sc-llYVjd jvkCAm"
                  >
                    Recent transactions
                  </h3>
                </div>
              </div>
              <div
                class="MuiTableContainer-root-XTYZl mMJbO MuiTableContainer-root sc-hiCkpJ eSbreC"
              >
                <table
                  aria-label="Recent transactions"
                  class="MuiTable-root-fOceSW cvYjqK MuiTable-root sc-gWWZvT dLIGbu"
                >
                  <thead
                    class="MuiTableHead-root-kuhZTu caSZpG MuiTableHead-root"
                  >
                    <tr
                      class="MuiTableRow-root-kusdoI gUEknp MuiTableRow-root MuiTableRow-head"
                    >
                      <th
                        class="MuiTableCell-root-cGsjcU dempIc MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall sc-cCcVtu kmTnth"
                        scope="col"
                      >
                        <button
                          class="MuiButtonBase-root-KjFWT jzTTmA MuiButtonBase-root MuiButton-root-gygAfe beoaly MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary sc-jcFiBM hkCoJh"
                          tabindex="0"
                          type="button"
                        >
                          Customer
                          <span
                            aria-hidden="true"
                            class="sc-caiMdP jVzQOz"
                          >
                            ↕
                          </span>
                        </button>
                      </th>
                      <th
                        class="MuiTableCell-root-cGsjcU dempIc MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall sc-cCcVtu kmTnth"
                        scope="col"
                      >
                        <button
                          class="MuiButtonBase-root-KjFWT jzTTmA MuiButtonBase-root MuiButton-root-gygAfe beoaly MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary sc-jcFiBM hkCoJh"
                          tabindex="0"
                          type="button"
                        >
                          Plan
                          <span
                            aria-hidden="true"
                            class="sc-caiMdP jVzQOz"
                          >
                            ↕
                          </span>
                        </button>
                      </th>
                      <th
                        class="MuiTableCell-root-cGsjcU dempIc MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall sc-cCcVtu kmTnth"
                        scope="col"
                      >
                        <button
                          class="MuiButtonBase-root-KjFWT jzTTmA MuiButtonBase-root MuiButton-root-gygAfe beoaly MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary sc-jcFiBM hkCoJh"
                          tabindex="0"
                          type="button"
                        >
                          Amount
                          <span
                            aria-hidden="true"
                            class="sc-caiMdP jVzQOz"
                          >
                            ↕
                          </span>
                        </button>
                      </th>
                      <th
                        class="MuiTableCell-root-cGsjcU dempIc MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall sc-cCcVtu kmTnth"
                        scope="col"
                      >
                        <button
                          class="MuiButtonBase-root-KjFWT jzTTmA MuiButtonBase-root MuiButton-root-gygAfe beoaly MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary sc-jcFiBM hkCoJh"
                          tabindex="0"
                          type="button"
                        >
                          Status
                          <span
                            aria-hidden="true"
                            class="sc-caiMdP jVzQOz"
                          >
                            ↕
                          </span>
                        </button>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="MuiTableBody-root-kbBTXm gIyZfI MuiTableBody-root"
                  >
                    <tr
                      class="MuiTableRow-root-kusdoI gUEknp MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root-cGsjcU imooBH MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall sc-cidDfp gGHGLG"
                      >
                        <div
                          class="sc-dlVwtM sc-iUKrAm eiVvxJ MuiBox-root"
                        >
                          <div
                            class="MuiAvatar-root-bNfEpJ bWOcbp MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault sc-iAKZmh jkBbHP"
                          >
                            M
                          </div>
                          Mark Johnson
                        </div>
                      </td>
                      <td
                        class="MuiTableCell-root-cGsjcU imooBH MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall sc-cidDfp gGHGLG"
                      >
                        Pro
                      </td>
                      <td
                        class="MuiTableCell-root-cGsjcU imooBH MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall sc-cidDfp gGHGLG"
                      >
                        $1,240
                      </td>
                      <td
                        class="MuiTableCell-root-cGsjcU imooBH MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall sc-cidDfp gGHGLG"
                      >
                        <div
                          class="MuiChip-root-braIjy hBatbS MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault sc-efQVjI gQIuFL"
                        >
                          <span
                            class="MuiChip-label-dLNntG egAQrQ MuiChip-label MuiChip-labelSmall"
                          >
                            Paid
                          </span>
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="MuiTableRow-root-kusdoI gUEknp MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root-cGsjcU imooBH MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall sc-cidDfp gGHGLG"
                      >
                        <div
                          class="sc-dlVwtM sc-iUKrAm eiVvxJ MuiBox-root"
                        >
                          <div
                            class="MuiAvatar-root-bNfEpJ bWOcbp MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault sc-iAKZmh gjfWv"
                          >
                            A
                          </div>
                          Alicia Smith
                        </div>
                      </td>
                      <td
                        class="MuiTableCell-root-cGsjcU imooBH MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall sc-cidDfp gGHGLG"
                      >
                        Basic
                      </td>
                      <td
                        class="MuiTableCell-root-cGsjcU imooBH MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall sc-cidDfp gGHGLG"
                      >
                        $480
                      </td>
                      <td
                        class="MuiTableCell-root-cGsjcU imooBH MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall sc-cidDfp gGHGLG"
                      >
                        <div
                          class="MuiChip-root-braIjy hBatbS MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault sc-efQVjI gvsmwt"
                        >
                          <span
                            class="MuiChip-label-dLNntG egAQrQ MuiChip-label MuiChip-labelSmall"
                          >
                            Pending
                          </span>
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="MuiTableRow-root-kusdoI gUEknp MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root-cGsjcU imooBH MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall sc-cidDfp gGHGLG"
                      >
                        <div
                          class="sc-dlVwtM sc-iUKrAm eiVvxJ MuiBox-root"
                        >
                          <div
                            class="MuiAvatar-root-bNfEpJ bWOcbp MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault sc-iAKZmh bySiYc"
                          >
                            D
                          </div>
                          David Lee
                        </div>
                      </td>
                      <td
                        class="MuiTableCell-root-cGsjcU imooBH MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall sc-cidDfp gGHGLG"
                      >
                        Enterprise
                      </td>
                      <td
                        class="MuiTableCell-root-cGsjcU imooBH MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall sc-cidDfp gGHGLG"
                      >
                        $3,980
                      </td>
                      <td
                        class="MuiTableCell-root-cGsjcU imooBH MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall sc-cidDfp gGHGLG"
                      >
                        <div
                          class="MuiChip-root-braIjy hBatbS MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault sc-efQVjI gQIuFL"
                        >
                          <span
                            class="MuiChip-label-dLNntG egAQrQ MuiChip-label MuiChip-labelSmall"
                          >
                            Paid
                          </span>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-huVzpj taEKm MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-lg-5"
        >
          <div
            class="MuiPaper-root-jrhCcG jOcBbN MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root-gZShbg fgCKnE MuiCard-root sc-fKVoIy epJDED"
            style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
          >
            <div
              class="MuiCardContent-root-gzKKBN kqwYnw MuiCardContent-root sc-bBHAhJ bmVDgK"
            >
              <div
                class="sc-dlVwtM sc-iwjfEg cBTSji MuiBox-root"
              >
                <div>
                  <p
                    class="sc-cxpUrY jujNPJ"
                  >
                    Summary
                  </p>
                  <h3
                    class="sc-llYVjd jvkCAm"
                  >
                    Activity
                  </h3>
                </div>
              </div>
              <div
                class="sc-dlVwtM sc-cTAoCz grwImp MuiBox-root"
              >
                <div
                  class="sc-dlVwtM sc-jObTYW gHUfgP MuiBox-root"
                >
                  <span
                    class="sc-dPiIMO eTnGDR"
                  />
                  <span
                    class="sc-bBHFiX hOHAFF"
                  >
                    New signup
                    <small
                      class="sc-cNKpwA jXKYDB"
                    >
                      12 minutes ago
                    </small>
                  </span>
                </div>
                <div
                  class="sc-dlVwtM sc-jObTYW gHUfgP MuiBox-root"
                >
                  <span
                    class="sc-dPiIMO eVNqAf"
                  />
                  <span
                    class="sc-bBHFiX hOHAFF"
                  >
                    Payment received
                    <small
                      class="sc-cNKpwA jXKYDB"
                    >
                      1 hour ago
                    </small>
                  </span>
                </div>
                <div
                  class="sc-dlVwtM sc-jObTYW gHUfgP MuiBox-root"
                >
                  <span
                    class="sc-dPiIMO iOoTIY"
                  />
                  <span
                    class="sc-bBHFiX hOHAFF"
                  >
                    Campaign report
                    <small
                      class="sc-cNKpwA jXKYDB"
                    >
                      Yesterday
                    </small>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`OverviewPage > matches its snapshot 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root-huVzpj eVGMZR MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 sc-kfPsKX hWfKrs"
  >
    <div
      class="MuiGrid-root-huVzpj cHqeFn MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12"
    >
      <div
        class="MuiGrid-root-huVzpj eVGMZR MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 sc-gsDMPd igAZwR"
      >
        <div
          class="MuiGrid-root-huVzpj dGKdmp MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-lg-4"
        >
          <div
            class="MuiPaper-root-jrhCcG jOcBbN MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root-gZShbg fgCKnE MuiCard-root sc-dkPwfY gTBLc"
            style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
          >
            <div
              class="MuiCardContent-root-gzKKBN kqwYnw MuiCardContent-root sc-hKwBjT fBDKED"
            >
              <div
                class="sc-eCIkAO ceECZG"
              >
                <span
                  class="sc-jRQBiJ fikzZh"
                >
                  Sales
                </span>
                <span
                  class="sc-gKckzE eNGhgi"
                >
                  +18.2%
                </span>
              </div>
              <div
                class="sc-iCfNyT fCMQTx"
              >
                <h3
                  class="sc-furwPO fwpksh"
                >
                  $48.2K
                </h3>
                <span
                  class="sc-pVUti iwqvMJ"
                >
                  ▲ 1.9K
                </span>
              </div>
              <div
                class="sc-jrQAon cRdNAl"
              >
                <span
                  class="sc-kDTkBQ bWIOGK"
                />
                <span
                  class="sc-kDTkBQ aUgaj"
                />
                <span
                  class="sc-kDTkBQ jjRYNB"
                />
                <span
                  class="sc-kDTkBQ jBeTYU"
                />
                <span
                  class="sc-kDTkBQ gDRsII"
                />
                <span
                  class="sc-kDTkBQ CYMty"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-huVzpj dGKdmp MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-lg-4"
        >
          <div
            class="MuiPaper-root-jrhCcG jOcBbN MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root-gZShbg fgCKnE MuiCard-root sc-dkPwfY gTBLc"
            style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
          >
            <div
              class="MuiCardContent-root-gzKKBN kqwYnw MuiCardContent-root sc-hKwBjT fBDKED"
            >
              <div
                class="sc-eCIkAO ceECZG"
              >
                <span
                  class="sc-jRQBiJ fikzZh"
                >
                  Conversion
                </span>
                <span
                  class="sc-gKckzE eNGhgi"
                >
                  +12.4%
                </span>
              </div>
              <div
                class="sc-iCfNyT fCMQTx"
              >
                <h3
                  class="sc-furwPO fwpksh"
                >
                  6.84%
                </h3>
                <span
                  class="sc-pVUti iwqvMJ"
                >
                  ▲ 0.8%
                </span>
              </div>
              <div
                class="sc-jrQAon cRdNAl"
              >
                <span
                  class="sc-kDTkBQ jrNGpF"
                />
                <span
                  class="sc-kDTkBQ hzMJzC"
                />
                <span
                  class="sc-kDTkBQ eaeGXZ"
                />
                <span
                  class="sc-kDTkBQ xmOPs"
                />
                <span
                  class="sc-kDTkBQ hGqTQx"
                />
                <span
                  class="sc-kDTkBQ fLrFbY"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-huVzpj dGKdmp MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-lg-4"
        >
          <div
            class="MuiPaper-root-jrhCcG jOcBbN MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root-gZShbg fgCKnE MuiCard-root sc-dkPwfY gTBLc"
            style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
          >
            <div
              class="MuiCardContent-root-gzKKBN kqwYnw MuiCardContent-root sc-hKwBjT fBDKED"
            >
              <div
                class="sc-eCIkAO ceECZG"
              >
                <span
                  class="sc-jRQBiJ fikzZh"
                >
                  Visitors
                </span>
                <span
                  class="sc-gKckzE epWxRl"
                >
                  -3.1%
                </span>
              </div>
              <div
                class="sc-iCfNyT fCMQTx"
              >
                <h3
                  class="sc-furwPO fwpksh"
                >
                  14.8K
                </h3>
                <span
                  class="sc-pVUti gwROOr"
                >
                  ▼ 420
                </span>
              </div>
              <div
                class="sc-jrQAon cRdNAl"
              >
                <span
                  class="sc-kDTkBQ gvpUa-d"
                />
                <span
                  class="sc-kDTkBQ koUvWq"
                />
                <span
                  class="sc-kDTkBQ cRIMSq"
                />
                <span
                  class="sc-kDTkBQ klRHrM"
                />
                <span
                  class="sc-kDTkBQ bPIuPn"
                />
                <span
                  class="sc-kDTkBQ WwbrQ"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-huVzpj gkBuWC MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="MuiPaper-root-jrhCcG jOcBbN MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root-gZShbg fgCKnE MuiCard-root sc-iqsgXZ ewqpMN"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root-gzKKBN kqwYnw MuiCardContent-root sc-crHjOq kIqsnS"
        >
          <div
            class="sc-eggkz dyXmFS"
          >
            <div>
              <p
                class="sc-bqiQyc dEWcMl"
              >
                Performance
              </p>
              <h3
                class="sc-ksdwth ixhMHU"
              >
                Revenue overview
              </h3>
            </div>
            <div
              aria-label="Revenue period"
              class="MuiToggleButtonGroup-root-fRZoWf dfzDsy MuiToggleButtonGroup-root MuiToggleButtonGroup-horizontal sc-hBUSYK bPJxXp"
              role="group"
            >
              <button
                aria-label="Month"
                aria-pressed="true"
                class="MuiButtonBase-root-KjFWT jzTTmA MuiButtonBase-root MuiToggleButton-root-lmwsek bxBlSi MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard sc-fotPuT MuiToggleButtonGroup-firstButton"
                tabindex="0"
                type="button"
                value="Month"
              >
                Month
              </button>
              <button
                aria-label="Quarter"
                aria-pressed="false"
                class="MuiButtonBase-root-KjFWT jzTTmA MuiButtonBase-root MuiToggleButton-root-lmwsek bxBlSi MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard sc-fotPuT MuiToggleButtonGroup-middleButton"
                tabindex="0"
                type="button"
                value="Quarter"
              >
                Quarter
              </button>
              <button
                aria-label="Year"
                aria-pressed="false"
                class="MuiButtonBase-root-KjFWT jzTTmA MuiButtonBase-root MuiToggleButton-root-lmwsek bxBlSi MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard sc-fotPuT MuiToggleButtonGroup-lastButton"
                tabindex="0"
                type="button"
                value="Year"
              >
                Year
              </button>
            </div>
          </div>
          <div
            aria-label="Month revenue chart"
            class="sc-fFelbd iiJIS"
          >
            <div
              class="sc-bkkgYE ipzbSX"
            />
            <div
              class="sc-ieedpP DFVZV"
            >
              <span
                class="sc-dJjZnq kWAYEc"
              />
              <span
                class="sc-dJjZnq gzGZdQ"
              />
              <span
                class="sc-dJjZnq gHWBDc"
              />
              <span
                class="sc-dJjZnq fMJwBx"
              />
              <span
                class="sc-dJjZnq fpDhpx"
              />
              <span
                class="sc-dJjZnq djyFnJ"
              />
              <span
                class="sc-dJjZnq ghXRzT"
              />
              <span
                class="sc-dJjZnq jCReRc"
              />
              <span
                class="sc-dJjZnq eKRbbS"
              />
              <span
                class="sc-dJjZnq lgiESJ"
              />
              <span
                class="sc-dJjZnq lkgRBp"
              />
              <span
                class="sc-dJjZnq dkTBSA"
              />
            </div>
          </div>
          <div
            class="sc-hGPAwl hlANgT"
          >
            <span>
              Jan
            </span>
            <span>
              Feb
            </span>
            <span>
              Mar
            </span>
            <span>
              Apr
            </span>
            <span>
              May
            </span>
            <span>
              Jun
            </span>
            <span>
              Jul
            </span>
            <span>
              Aug
            </span>
            <span>
              Sep
            </span>
            <span>
              Oct
            </span>
            <span>
              Nov
            </span>
            <span>
              Dec
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-huVzpj cDcyKm MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
    >
      <div
        class="MuiPaper-root-jrhCcG jOcBbN MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root-gZShbg fgCKnE MuiCard-root sc-fKVoIy epJDED"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root-gzKKBN kqwYnw MuiCardContent-root sc-bBHAhJ bmVDgK"
        >
          <div
            class="sc-dlVwtM sc-iwjfEg cBTSji MuiBox-root"
          >
            <div>
              <p
                class="sc-cxpUrY jujNPJ"
              >
                Today
              </p>
              <h3
                class="sc-llYVjd jvkCAm"
              >
                Tasks
              </h3>
            </div>
            <button
              class="MuiButtonBase-root-KjFWT jzTTmA MuiButtonBase-root MuiButton-root-gygAfe beoaly MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary sc-iJKPHa VmjWd"
              tabindex="0"
              type="button"
            >
              View all
            </button>
          </div>
          <ul
            class="MuiList-root-fLOioK lhYeCO MuiList-root sc-giYgZj jXyPoe"
          >
            <div
              class="MuiButtonBase-root-KjFWT jzTTmA MuiButtonBase-root MuiListItemButton-root-frNOJJ flARlq MuiListItemButton-root sc-ezbjNg einWoW"
              role="button"
              tabindex="0"
            >
              <span
                class="sc-bYoBfp lnmAYX"
              />
              <span
                class="sc-kLwfci fxHaWK"
              >
                <strong
                  class="sc-ikJwur liAwyU"
                >
                  Design review
                </strong>
                <small
                  class="sc-jJoSXA ikAfPw"
                >
                  09:30 AM
                </small>
              </span>
            </div>
            <div
              class="MuiButtonBase-root-KjFWT jzTTmA MuiButtonBase-root MuiListItemButton-root-frNOJJ flARlq MuiListItemButton-root sc-ezbjNg einWoW"
              role="button"
              tabindex="0"
            >
              <span
                class="sc-bYoBfp cMQmAZ"
              />
              <span
                class="sc-kLwfci fxHaWK"
              >
                <strong
                  class="sc-ikJwur liAwyU"
                >
                  Marketing sync
                </strong>
                <small
                  class="sc-jJoSXA ikAfPw"
                >
                  11:00 AM
                </small>
              </span>
            </div>
            <div
              class="MuiButtonBase-root-KjFWT jzTTmA MuiButtonBase-root MuiListItemButton-root-frNOJJ flARlq MuiListItemButton-root sc-ezbjNg einWoW"
              role="button"
              tabindex="0"
            >
              <span
                class="sc-bYoBfp exjpIe"
              />
              <span
                class="sc-kLwfci fxHaWK"
              >
                <strong
                  class="sc-ikJwur liAwyU"
                >
                  Campaign launch
                </strong>
                <small
                  class="sc-jJoSXA ikAfPw"
                >
                  02:00 PM
                </small>
              </span>
            </div>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-huVzpj haGPqS MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-lg-7"
    >
      <div
        class="MuiPaper-root-jrhCcG jOcBbN MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root-gZShbg fgCKnE MuiCard-root sc-fKVoIy epJDED"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root-gzKKBN kqwYnw MuiCardContent-root sc-bBHAhJ bmVDgK"
        >
          <div
            class="sc-dlVwtM sc-iwjfEg cBTSji MuiBox-root"
          >
            <div>
              <p
                class="sc-cxpUrY jujNPJ"
              >
                Leads
              </p>
              <h3
                class="sc-llYVjd jvkCAm"
              >
                Recent transactions
              </h3>
            </div>
          </div>
          <div
            class="MuiTableContainer-root-XTYZl mMJbO MuiTableContainer-root sc-hiCkpJ eSbreC"
          >
            <table
              aria-label="Recent transactions"
              class="MuiTable-root-fOceSW cvYjqK MuiTable-root sc-gWWZvT dLIGbu"
            >
              <thead
                class="MuiTableHead-root-kuhZTu caSZpG MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root-kusdoI gUEknp MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root-cGsjcU dempIc MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall sc-cCcVtu kmTnth"
                    scope="col"
                  >
                    <button
                      class="MuiButtonBase-root-KjFWT jzTTmA MuiButtonBase-root MuiButton-root-gygAfe beoaly MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary sc-jcFiBM hkCoJh"
                      tabindex="0"
                      type="button"
                    >
                      Customer
                      <span
                        aria-hidden="true"
                        class="sc-caiMdP jVzQOz"
                      >
                        ↕
                      </span>
                    </button>
                  </th>
                  <th
                    class="MuiTableCell-root-cGsjcU dempIc MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall sc-cCcVtu kmTnth"
                    scope="col"
                  >
                    <button
                      class="MuiButtonBase-root-KjFWT jzTTmA MuiButtonBase-root MuiButton-root-gygAfe beoaly MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary sc-jcFiBM hkCoJh"
                      tabindex="0"
                      type="button"
                    >
                      Plan
                      <span
                        aria-hidden="true"
                        class="sc-caiMdP jVzQOz"
                      >
                        ↕
                      </span>
                    </button>
                  </th>
                  <th
                    class="MuiTableCell-root-cGsjcU dempIc MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall sc-cCcVtu kmTnth"
                    scope="col"
                  >
                    <button
                      class="MuiButtonBase-root-KjFWT jzTTmA MuiButtonBase-root MuiButton-root-gygAfe beoaly MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary sc-jcFiBM hkCoJh"
                      tabindex="0"
                      type="button"
                    >
                      Amount
                      <span
                        aria-hidden="true"
                        class="sc-caiMdP jVzQOz"
                      >
                        ↕
                      </span>
                    </button>
                  </th>
                  <th
                    class="MuiTableCell-root-cGsjcU dempIc MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall sc-cCcVtu kmTnth"
                    scope="col"
                  >
                    <button
                      class="MuiButtonBase-root-KjFWT jzTTmA MuiButtonBase-root MuiButton-root-gygAfe beoaly MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary sc-jcFiBM hkCoJh"
                      tabindex="0"
                      type="button"
                    >
                      Status
                      <span
                        aria-hidden="true"
                        class="sc-caiMdP jVzQOz"
                      >
                        ↕
                      </span>
                    </button>
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root-kbBTXm gIyZfI MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root-kusdoI gUEknp MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root-cGsjcU imooBH MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall sc-cidDfp gGHGLG"
                  >
                    <div
                      class="sc-dlVwtM sc-iUKrAm eiVvxJ MuiBox-root"
                    >
                      <div
                        class="MuiAvatar-root-bNfEpJ bWOcbp MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault sc-iAKZmh jkBbHP"
                      >
                        M
                      </div>
                      Mark Johnson
                    </div>
                  </td>
                  <td
                    class="MuiTableCell-root-cGsjcU imooBH MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall sc-cidDfp gGHGLG"
                  >
                    Pro
                  </td>
                  <td
                    class="MuiTableCell-root-cGsjcU imooBH MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall sc-cidDfp gGHGLG"
                  >
                    $1,240
                  </td>
                  <td
                    class="MuiTableCell-root-cGsjcU imooBH MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall sc-cidDfp gGHGLG"
                  >
                    <div
                      class="MuiChip-root-braIjy hBatbS MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault sc-efQVjI gQIuFL"
                    >
                      <span
                        class="MuiChip-label-dLNntG egAQrQ MuiChip-label MuiChip-labelSmall"
                      >
                        Paid
                      </span>
                    </div>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root-kusdoI gUEknp MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root-cGsjcU imooBH MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall sc-cidDfp gGHGLG"
                  >
                    <div
                      class="sc-dlVwtM sc-iUKrAm eiVvxJ MuiBox-root"
                    >
                      <div
                        class="MuiAvatar-root-bNfEpJ bWOcbp MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault sc-iAKZmh gjfWv"
                      >
                        A
                      </div>
                      Alicia Smith
                    </div>
                  </td>
                  <td
                    class="MuiTableCell-root-cGsjcU imooBH MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall sc-cidDfp gGHGLG"
                  >
                    Basic
                  </td>
                  <td
                    class="MuiTableCell-root-cGsjcU imooBH MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall sc-cidDfp gGHGLG"
                  >
                    $480
                  </td>
                  <td
                    class="MuiTableCell-root-cGsjcU imooBH MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall sc-cidDfp gGHGLG"
                  >
                    <div
                      class="MuiChip-root-braIjy hBatbS MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault sc-efQVjI gvsmwt"
                    >
                      <span
                        class="MuiChip-label-dLNntG egAQrQ MuiChip-label MuiChip-labelSmall"
                      >
                        Pending
                      </span>
                    </div>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root-kusdoI gUEknp MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root-cGsjcU imooBH MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall sc-cidDfp gGHGLG"
                  >
                    <div
                      class="sc-dlVwtM sc-iUKrAm eiVvxJ MuiBox-root"
                    >
                      <div
                        class="MuiAvatar-root-bNfEpJ bWOcbp MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault sc-iAKZmh bySiYc"
                      >
                        D
                      </div>
                      David Lee
                    </div>
                  </td>
                  <td
                    class="MuiTableCell-root-cGsjcU imooBH MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall sc-cidDfp gGHGLG"
                  >
                    Enterprise
                  </td>
                  <td
                    class="MuiTableCell-root-cGsjcU imooBH MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall sc-cidDfp gGHGLG"
                  >
                    $3,980
                  </td>
                  <td
                    class="MuiTableCell-root-cGsjcU imooBH MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall sc-cidDfp gGHGLG"
                  >
                    <div
                      class="MuiChip-root-braIjy hBatbS MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault sc-efQVjI gQIuFL"
                    >
                      <span
                        class="MuiChip-label-dLNntG egAQrQ MuiChip-label MuiChip-labelSmall"
                      >
                        Paid
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-huVzpj taEKm MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-lg-5"
    >
      <div
        class="MuiPaper-root-jrhCcG jOcBbN MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root-gZShbg fgCKnE MuiCard-root sc-fKVoIy epJDED"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root-gzKKBN kqwYnw MuiCardContent-root sc-bBHAhJ bmVDgK"
        >
          <div
            class="sc-dlVwtM sc-iwjfEg cBTSji MuiBox-root"
          >
            <div>
              <p
                class="sc-cxpUrY jujNPJ"
              >
                Summary
              </p>
              <h3
                class="sc-llYVjd jvkCAm"
              >
                Activity
              </h3>
            </div>
          </div>
          <div
            class="sc-dlVwtM sc-cTAoCz grwImp MuiBox-root"
          >
            <div
              class="sc-dlVwtM sc-jObTYW gHUfgP MuiBox-root"
            >
              <span
                class="sc-dPiIMO eTnGDR"
              />
              <span
                class="sc-bBHFiX hOHAFF"
              >
                New signup
                <small
                  class="sc-cNKpwA jXKYDB"
                >
                  12 minutes ago
                </small>
              </span>
            </div>
            <div
              class="sc-dlVwtM sc-jObTYW gHUfgP MuiBox-root"
            >
              <span
                class="sc-dPiIMO eVNqAf"
              />
              <span
                class="sc-bBHFiX hOHAFF"
              >
                Payment received
                <small
                  class="sc-cNKpwA jXKYDB"
                >
                  1 hour ago
                </small>
              </span>
            </div>
            <div
              class="sc-dlVwtM sc-jObTYW gHUfgP MuiBox-root"
            >
              <span
                class="sc-dPiIMO iOoTIY"
              />
              <span
                class="sc-bBHFiX hOHAFF"
              >
                Campaign report
                <small
                  class="sc-cNKpwA jXKYDB"
                >
                  Yesterday
                </small>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RevenuePanel > matches its snapshot 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root-jrhCcG jOcBbN MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root-gZShbg fgCKnE MuiCard-root sc-iqsgXZ ewqpMN"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="MuiCardContent-root-gzKKBN kqwYnw MuiCardContent-root sc-crHjOq kIqsnS"
    >
      <div
        class="sc-eggkz dyXmFS"
      >
        <div>
          <p
            class="sc-bqiQyc dEWcMl"
          >
            Performance
          </p>
          <h3
            class="sc-ksdwth ixhMHU"
          >
            Revenue overview
          </h3>
        </div>
        <div
          aria-label="Revenue period"
          class="MuiToggleButtonGroup-root-fRZoWf dfzDsy MuiToggleButtonGroup-root MuiToggleButtonGroup-horizontal sc-hBUSYK bPJxXp"
          role="group"
        >
          <button
            aria-label="Month"
            aria-pressed="true"
            class="MuiButtonBase-root-KjFWT jzTTmA MuiButtonBase-root MuiToggleButton-root-lmwsek bxBlSi MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard sc-fotPuT MuiToggleButtonGroup-firstButton"
            tabindex="0"
            type="button"
            value="Month"
          >
            Month
          </button>
          <button
            aria-label="Quarter"
            aria-pressed="false"
            class="MuiButtonBase-root-KjFWT jzTTmA MuiButtonBase-root MuiToggleButton-root-lmwsek bxBlSi MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard sc-fotPuT MuiToggleButtonGroup-middleButton"
            tabindex="0"
            type="button"
            value="Quarter"
          >
            Quarter
          </button>
          <button
            aria-label="Year"
            aria-pressed="false"
            class="MuiButtonBase-root-KjFWT jzTTmA MuiButtonBase-root MuiToggleButton-root-lmwsek bxBlSi MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard sc-fotPuT MuiToggleButtonGroup-lastButton"
            tabindex="0"
            type="button"
            value="Year"
          >
            Year
          </button>
        </div>
      </div>
      <div
        aria-label="Month revenue chart"
        class="sc-fFelbd iiJIS"
      >
        <div
          class="sc-bkkgYE ipzbSX"
        />
        <div
          class="sc-ieedpP DFVZV"
        >
          <span
            class="sc-dJjZnq kWAYEc"
          />
          <span
            class="sc-dJjZnq gzGZdQ"
          />
          <span
            class="sc-dJjZnq gHWBDc"
          />
          <span
            class="sc-dJjZnq fMJwBx"
          />
          <span
            class="sc-dJjZnq fpDhpx"
          />
          <span
            class="sc-dJjZnq djyFnJ"
          />
          <span
            class="sc-dJjZnq ghXRzT"
          />
          <span
            class="sc-dJjZnq jCReRc"
          />
          <span
            class="sc-dJjZnq eKRbbS"
          />
          <span
            class="sc-dJjZnq lgiESJ"
          />
          <span
            class="sc-dJjZnq lkgRBp"
          />
          <span
            class="sc-dJjZnq dkTBSA"
          />
        </div>
      </div>
      <div
        class="sc-hGPAwl hlANgT"
      >
        <span>
          Jan
        </span>
        <span>
          Feb
        </span>
        <span>
          Mar
        </span>
        <span>
          Apr
        </span>
        <span>
          May
        </span>
        <span>
          Jun
        </span>
        <span>
          Jul
        </span>
        <span>
          Aug
        </span>
        <span>
          Sep
        </span>
        <span>
          Oct
        </span>
        <span>
          Nov
        </span>
        <span>
          Dec
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatCards > matches its snapshot and renders each metric 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root-huVzpj eVGMZR MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 sc-gsDMPd igAZwR"
  >
    <div
      class="MuiGrid-root-huVzpj dGKdmp MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-lg-4"
    >
      <div
        class="MuiPaper-root-jrhCcG jOcBbN MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root-gZShbg fgCKnE MuiCard-root sc-dkPwfY gTBLc"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root-gzKKBN kqwYnw MuiCardContent-root sc-hKwBjT fBDKED"
        >
          <div
            class="sc-eCIkAO ceECZG"
          >
            <span
              class="sc-jRQBiJ fikzZh"
            >
              Sales
            </span>
            <span
              class="sc-gKckzE eNGhgi"
            >
              +18.2%
            </span>
          </div>
          <div
            class="sc-iCfNyT fCMQTx"
          >
            <h3
              class="sc-furwPO fwpksh"
            >
              $48.2K
            </h3>
            <span
              class="sc-pVUti iwqvMJ"
            >
              ▲ 1.9K
            </span>
          </div>
          <div
            class="sc-jrQAon cRdNAl"
          >
            <span
              class="sc-kDTkBQ bWIOGK"
            />
            <span
              class="sc-kDTkBQ aUgaj"
            />
            <span
              class="sc-kDTkBQ jjRYNB"
            />
            <span
              class="sc-kDTkBQ jBeTYU"
            />
            <span
              class="sc-kDTkBQ gDRsII"
            />
            <span
              class="sc-kDTkBQ CYMty"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-huVzpj dGKdmp MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-lg-4"
    >
      <div
        class="MuiPaper-root-jrhCcG jOcBbN MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root-gZShbg fgCKnE MuiCard-root sc-dkPwfY gTBLc"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root-gzKKBN kqwYnw MuiCardContent-root sc-hKwBjT fBDKED"
        >
          <div
            class="sc-eCIkAO ceECZG"
          >
            <span
              class="sc-jRQBiJ fikzZh"
            >
              Conversion
            </span>
            <span
              class="sc-gKckzE eNGhgi"
            >
              +12.4%
            </span>
          </div>
          <div
            class="sc-iCfNyT fCMQTx"
          >
            <h3
              class="sc-furwPO fwpksh"
            >
              6.84%
            </h3>
            <span
              class="sc-pVUti iwqvMJ"
            >
              ▲ 0.8%
            </span>
          </div>
          <div
            class="sc-jrQAon cRdNAl"
          >
            <span
              class="sc-kDTkBQ jrNGpF"
            />
            <span
              class="sc-kDTkBQ hzMJzC"
            />
            <span
              class="sc-kDTkBQ eaeGXZ"
            />
            <span
              class="sc-kDTkBQ xmOPs"
            />
            <span
              class="sc-kDTkBQ hGqTQx"
            />
            <span
              class="sc-kDTkBQ fLrFbY"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-huVzpj dGKdmp MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-lg-4"
    >
      <div
        class="MuiPaper-root-jrhCcG jOcBbN MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root-gZShbg fgCKnE MuiCard-root sc-dkPwfY gTBLc"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root-gzKKBN kqwYnw MuiCardContent-root sc-hKwBjT fBDKED"
        >
          <div
            class="sc-eCIkAO ceECZG"
          >
            <span
              class="sc-jRQBiJ fikzZh"
            >
              Visitors
            </span>
            <span
              class="sc-gKckzE epWxRl"
            >
              -3.1%
            </span>
          </div>
          <div
            class="sc-iCfNyT fCMQTx"
          >
            <h3
              class="sc-furwPO fwpksh"
            >
              14.8K
            </h3>
            <span
              class="sc-pVUti gwROOr"
            >
              ▼ 420
            </span>
          </div>
          <div
            class="sc-jrQAon cRdNAl"
          >
            <span
              class="sc-kDTkBQ gvpUa-d"
            />
            <span
              class="sc-kDTkBQ koUvWq"
            />
            <span
              class="sc-kDTkBQ cRIMSq"
            />
            <span
              class="sc-kDTkBQ klRHrM"
            />
            <span
              class="sc-kDTkBQ bPIuPn"
            />
            <span
              class="sc-kDTkBQ WwbrQ"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Topbar > matches its snapshot 1`] = `
<DocumentFragment>
  <div
    class="sc-dlVwtM sc-AjlSJ jRmdpA MuiBox-root"
  >
    <div>
      <p
        class="sc-khQeTG bexipk"
      >
        Monday, Sep 28
      </p>
      <h2
        class="sc-hUpbpP gWnlXh"
      >
        Overview
      </h2>
    </div>
    <div
      class="MuiStack-root-eDNxKZ iQCCXE MuiStack-root sc-jgrLDs dptLgH"
    >
      <button
        aria-label="Search"
        class="MuiButtonBase-root-KjFWT jzTTmA MuiButtonBase-root MuiIconButton-root-jYvjWt eSYNrZ MuiIconButton-root MuiIconButton-sizeMedium sc-gSQHZB HHshx"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-ffqWxl eeSQDk MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
          data-testid="SearchIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14"
          />
        </svg>
      </button>
      <button
        aria-haspopup="menu"
        aria-label="Notifications"
        class="MuiButtonBase-root-KjFWT jzTTmA MuiButtonBase-root MuiIconButton-root-jYvjWt eSYNrZ MuiIconButton-root MuiIconButton-sizeMedium sc-gSQHZB HHshx"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-ffqWxl eeSQDk MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
          data-testid="NotificationsNoneIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.9 2 2 2m6-6v-5c0-3.07-1.63-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.64 5.36 6 7.92 6 11v5l-2 2v1h16v-1zm-2 1H8v-6c0-2.48 1.51-4.5 4-4.5s4 2.02 4 4.5z"
          />
        </svg>
      </button>
      <button
        class="MuiButtonBase-root-KjFWT jzTTmA MuiButtonBase-root MuiButton-root-gygAfe UEwGP MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary sc-lbhHsq jEfNzz"
        data-active="true"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-startIcon-eHntpP hoqXmN MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-ffqWxl eeSQDk MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
            data-testid="AddIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
            />
          </svg>
        </span>
        New report
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WorkspacePage > matches its snapshot 1`] = `
<DocumentFragment>
  <div
    class="MuiStack-root-eDNxKZ efQHA MuiStack-root sc-lcerzc dIXqsm"
  >
    <div
      class="sc-gGCErr"
    >
      <p
        class="sc-clIAoS oZBfv"
      >
        Insights
      </p>
      <h3
        class="sc-faUoBp iWcYIH"
      >
        Analytics workspace
      </h3>
      <p
        class="sc-GakyQ FwHyC"
      >
        Track audience behavior and conversion performance across your workspace.
      </p>
    </div>
    <div
      class="MuiGrid-root-huVzpj eVGMZR MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2"
    >
      <div
        class="MuiGrid-root-huVzpj eazAWC MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-lg-9"
      >
        <div
          class="MuiPaper-root-jrhCcG jOcBbN MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root-gZShbg fgCKnE MuiCard-root sc-fWCILE iKAeyT"
          style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
        >
          <div
            class="MuiCardContent-root-gzKKBN kqwYnw MuiCardContent-root sc-dvQa-dN iuSOMa"
          >
            <div
              class="sc-TBUBK koTxzc"
            >
              <div>
                <p
                  class="sc-clIAoS oZBfv"
                >
                  Workspace tools
                </p>
                <h6
                  class="MuiTypography-root-bWKCMb exVBGg MuiTypography-root MuiTypography-h6"
                >
                  Manage insights
                </h6>
              </div>
              <button
                class="MuiButtonBase-root-KjFWT jzTTmA MuiButtonBase-root MuiButton-root-gygAfe UEwGP MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary sc-jIkVsP kFVfJa"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-startIcon-eHntpP hoqXmN MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-ffqWxl eeSQDk MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                    data-testid="AddIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
                    />
                  </svg>
                </span>
                Create new
              </button>
            </div>
            <div
              class="sc-ZOvtA llSBlr"
            >
              <button
                class="sc-jOxwkF eUSPKK"
                type="button"
              >
                <span
                  class="sc-hmjqIC bOWalN"
                >
                  01
                </span>
                <span
                  class="sc-eLwIaL cbyFud"
                >
                  Sessions
                </span>
                <span
                  class="sc-bTfXSk jJQBye"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-ffqWxl kGIqpq MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                    data-testid="ArrowForwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
              </button>
              <button
                class="sc-jOxwkF eUSPKK"
                type="button"
              >
                <span
                  class="sc-hmjqIC bOWalN"
                >
                  02
                </span>
                <span
                  class="sc-eLwIaL cbyFud"
                >
                  Bounce rate
                </span>
                <span
                  class="sc-bTfXSk jJQBye"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-ffqWxl kGIqpq MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                    data-testid="ArrowForwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
              </button>
              <button
                class="sc-jOxwkF eUSPKK"
                type="button"
              >
                <span
                  class="sc-hmjqIC bOWalN"
                >
                  03
                </span>
                <span
                  class="sc-eLwIaL cbyFud"
                >
                  Avg. session
                </span>
                <span
                  class="sc-bTfXSk jJQBye"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-ffqWxl kGIqpq MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                    data-testid="ArrowForwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
